--- a/website/index.html
+++ b/website/index.html
@@ -2,26 +2,44 @@
 <html>
 
 <head>
+    <meta charset="utf-8" />
     <title>C3Tinder</title>
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, minimum-scale=1.0, interactive-widget=resizes-content" />
     <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="swiper.min.css" />
     <link rel="stylesheet" href="index.css" />
 </head>
 
 <body>
 
     <h1 id="loading">Loading...</h1>
-    <article id="card">
-        <header>
-            <h2><a id="shift_header" href="#"></a></h2>
-            <ul>
-                <li id="shift_date"></li>
-                <li><a id="shift_location" href="#"></a></li>
-                <li><a id="shift_angel_type" href="#"></a></li>
-            </ul>
-        </header>
 
-    </article>
+    <div id="swiper" style="width: 100%; height: 100%;">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide decline">
+                <div>X Skip</div>
+            </div>
+            <article id="card" class="swiper-slide">
+                <div>
+                    <header>
+                        <h2><a id="shift_header" href="#"></a></h2>
+                    </header>
+                    <ul>
+                        <li id="shift_date"></li>
+                        <li><a id="shift_location" href="#"></a></li>
+                        <li><a id="shift_angel_type" href="#"></a></li>
+                        <li><button id="skip">X Skip</button><button id="remember">✓ Remember</button></li>
+                    </ul>
+                </div>
+            </article>
+            <div class="swiper-slide accept">
+                <div>✓ Remember</div>
+            </div>
+        </div>
+    </div>
 
+    <script src="swiper.min.js"></script>
     <script src="index.js"></script>
 </body>
 
