Added local storage and counting-bubble

--- a/website/index.html
+++ b/website/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav>
-        <button title="show shifts that were remembered"><img src="icons/cart.svg" /></button>
+        <button title="show shifts that were remembered"><img src="icons/cart.svg" /><span id="bubble">0</span></button>
         <button title="change settings"><img src="icons/edit-pencil.svg" /></button>
     </nav>
 
