Minor adjustments to make app deploy properly

--- a/website/index.html
+++ b/website/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 
+<!-- Please don't hack or DDoS. Feel free to let me know if you find any issues, bugs: https://github.com/TheJP/c3tinder -->
+
 <head>
     <meta charset="utf-8" />
-    <title>C3Tinder</title>
+    <title>c3tinder</title>
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, minimum-scale=1.0, interactive-widget=resizes-content" />
     <link rel="stylesheet" href="normalize.css" />
