Implemented datetime filters

--- a/website/index.html
+++ b/website/index.html
@@ -81,10 +81,14 @@
                 <h3>Date / Time</h3>
                 <ul>
                     <li>
-                        <label for="settings_start">Start</label> <input type="datetime-local" id="settings_start" />
+                        <label for="settings_start_date">Start</label>
+                        <input type="date" id="settings_start_date" />
+                        <input type="time" id="settings_start_time" />
                     </li>
                     <li>
-                        <label for="settings_end">End</label> <input type="datetime-local" id="settings_end" />
+                        <label for="settings_end_date">End</label>
+                        <input type="date" id="settings_end_date" />
+                        <input type="time" id="settings_end_time" />
                     </li>
                 </ul>
             </section>
