--- a/website/index.html
+++ b/website/index.html
@@ -15,6 +15,8 @@
 </head>
 
 <body>
+    <noscript>This site requires javascript and local-storage to work as intended.</noscript>
+
     <nav>
         <button id="open_cart" title="show shifts that were remembered"><img src="icons/cart.svg" /><span
                 id="bubble">0</span></button>
